# rlds-creator

./: README.md  WORKSPACE.bazel
docker/: Dockerfile  build.sh
rlds_creator/: BUILD.bazel  camera_observation_wrapper.py  client.proto  config.py  constants.py  environment.py  environment_factory.py  environment_handler.py  environment_handler_test.py  environment_proxy.py  environment_proxy_test.py  environment_wrapper.py  episode_storage.py  episode_storage_factory.py  file_utils.py  gym_renderer.py  gym_renderer_test.py  gym_utils.py  gym_utils_test.py  input_utils.py  input_utils_test.py  merger.py  merger_test.py  pickle_episode_storage.py  pickle_episode_storage_test.py  renderer.py  renderer_test.py  replay.py  replay_test.py  requirements.txt  riegeli_episode_storage.py  riegeli_episode_storage_test.py  server.py  sqlalchemy_storage.py  sqlalchemy_storage_test.py  storage.py  storage_test_util.py  study.proto  test_utils.py  utils.py  (+1 more)
rlds_creator/envs/: BUILD.bazel  atari_env.py  atari_env_test.py  dmlab_env.py  dmlab_env_test.py  net_hack_env.py  net_hack_env_test.py  procgen_env.py  procgen_env_test.py  robodesk_env.py  robodesk_env_test.py  robosuite_env.py  robosuite_env_test.py
rlds_creator/js/: BUILD.bazel  app.js  confirm_dialog.js  externs.js  study_editor.js  utils.js  web_socket.js
rlds_creator/static/: BUILD.bazel  app.css  app.html
