# Copyright 2021 RLDSCreator Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(
    "@rules_closure//closure:defs.bzl",
    "closure_css_binary",
    "closure_css_library",
    "closure_js_binary",
)

package(default_visibility = ["//rlds_creator:__subpackages__"])

filegroup(
    name = "static",
    srcs = [
        "app.html",
        ":app_compiled",
        ":app_css",
    ],
)

closure_css_library(
    name = "css_lib",
    srcs = ["app.css"],
)

closure_css_binary(
    name = "app_css",
    # Do not rename the CSS classes.
    renaming = False,
    deps = [
        ":css_lib",
        "@rules_closure//closure/library:css",
    ],
)

closure_js_binary(
    name = "app_compiled",
    entry_points = ["rlds_creator"],
    deps = [
        "//rlds_creator/js:js_lib",
    ],
)
